# beamtalk-uat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  uat.yml
projects/actor_extension/: beamtalk.toml  expect.toml
projects/actor_extension/src/: SomeActor.bt  SomeActorExtension.bt
projects/actor_extension/test/: SomeActorExtensionTest.bt
projects/cli_build/: .gitignore  beamtalk.toml  expect.toml
projects/cli_build/src/: CliBuild.bt
projects/cli_fmt_check_clean/: beamtalk.toml  expect.toml
projects/cli_fmt_check_clean/src/: CliFmtCheckClean.bt
projects/cli_fmt_check_detects/: beamtalk.toml  expect.toml
projects/cli_help/: expect.toml
projects/cli_lint_clean/: beamtalk.toml  expect.toml
projects/cli_lint_detects/: beamtalk.toml  expect.toml
projects/cli_lint_json/: beamtalk.toml  expect.toml
projects/cli_new/: expect.toml
projects/cli_new_app/: expect.toml
projects/cli_new_app_fmt_clean/: expect.toml
projects/cli_new_fmt_clean/: expect.toml
projects/cli_type_coverage/: beamtalk.toml  expect.toml
projects/lsp/: beamtalk.toml  expect.toml
projects/lsp/src/: LspDocumentSymbol.bt  (+1 more)
projects/lsp_completion/: beamtalk.toml  expect.toml
projects/lsp_definition/: beamtalk.toml  expect.toml
projects/lsp_document_symbol/: beamtalk.toml  expect.toml
projects/lsp_hover/: beamtalk.toml  expect.toml
projects/mcp_evaluate/: beamtalk.toml  expect.toml
projects/mcp_project_eval/: beamtalk.toml  expect.toml
projects/smoke/: .gitignore  .mcp.json  AGENTS.md  Justfile  README.md  beamtalk.toml  expect.toml
scripts/: setup-cloud.sh
src/: lib.rs  lsp.rs  mcp.rs  scenario.rs
tests/: scenarios.rs  smoke.rs
(+13 files in other folders)
