# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-uat"
version = "0.1.0"
edition = "2021"
description = "Acceptance-gate harness: installs a released Beamtalk toolchain bundle and runs real-project scenarios against it (BT-2253)."
license = "Apache-2.0"
publish = false

# The harness orchestrates the *released* `beamtalk` binary plus standard tools
# (`gh`, `tar`) via std::process, and hand-rolls the MCP/LSP stdio clients
# (`src/mcp.rs`, `src/lsp.rs`) — that transport stays dependency-free on purpose,
# so a generic JSON-RPC crate can't paper over a framing bug in the toolchain
# under test. The one sanctioned exception is *config parsing*: `expect.toml`
# scenario files are our own data, not the artifact under test, so we use `toml`
# + `serde` there (it unlocks the nested `[[scenario]]` / `[[step]]` tables the
# old hand-rolled flat parser couldn't express). See BT-2480.
[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1"

[lib]
path = "src/lib.rs"
